--- a/src/components/_menu.scss
+++ b/src/components/_menu.scss
@@ -8,6 +8,7 @@
     top: auto;
     left: auto;
     width: auto;
+    height: calc(100% - 3rem);
     order: -2;
     overflow-x: auto;
     scrollbar-width: thin;
